--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   "scripts": {
     "build": "vue-tsc --declaration --emitDeclarationOnly && vite build",
     "prepare": "npm run build",
-    "lint": "npm run eslint && npm run stylelint",
-    "eslint": "eslint \"src/**/*.{js,ts,vue}\"",
-    "stylelint": "stylelint \"src/**/*.vue\""
+    "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
+    "lint:eslint": "eslint \"{src,test}/**/*.ts\"",
+    "lint:prettier": "prettier -c \"{src,test}/**/*.{json,js,ts}\"",
+    "lint:stylelint": "stylelint \"src/**/*.vue\""
   },
   "repository": {
     "type": "git",
